Fix toast weirdness on iOS scrolling

--- a/components/toast.module.css
+++ b/components/toast.module.css
@@ -1,11 +1,17 @@
+.toastContainer {
+  transform: translate3d(0,0,0);
+}
+
 .toast {
   width: auto;
   border: 1px solid var(--bs-success-border-subtle);
   color: #fff;
+  transform: translate3d(0,0,0);
 }
 
 .toastClose {
-color: #fff;
+  transform: translate3d(0,0,0);
+  color: #fff;
   font-family: "lightning";
   font-size: 150%;
   line-height: 1rem;
